@@ -1,3 +1,8 @@
+2001-10-27 Christoph Cullmann <cullmann@kde.org>
+  * undo/redo works now without errors
+  * fix many memleaks + some crashs in buffer + hl
+  * fix ctx managment (almost)
+
 2001-10-27 Joseph Wenninger <jowenn@kde.org
   * Highlighting isn't updated completely yet (should be fixed now), but uses:
         * I have to do some nasty workaround because the overloaded == 
